src/index.css
/* ... */
.clear-links-btn:hover {
  background-color: hsl(var(--red), 0.7);
}

@media (min-width: 1050px) {
  .shorten-section {
    margin-inline: auto;
    padding-inline: 2rem;
  }

  .shortening-form {
    display: flex;
    align-items: center;
    background-image: url('./images/bg-shorten-desktop.svg');
    background-position: center;
    background-size: cover;
  }

  .shortening-form .error-message {
    bottom: 5%;
  }

  .shortening-form input {
    flex: 2;
    margin-bottom: 0;
    margin-right: 2rem;
  }

  .shortening-form .shorten-it-btn {
    /* flex: 1; */
    width: fit-content;
    padding: 0.6rem 2rem;
  }
}

/* ------------------- */
/* Link styles         */
/* ------------------- */
.links-container {
  margin-top: 2rem;
}

.link-item {
  background-color: white;
  border-radius: 5px;
}

.link-item:not(:last-child) {
  margin-bottom: 2rem;
}

.link-item .original-link {
  padding: 1rem;
  border-bottom: 1px solid hsl(var(--gray));
}

.shortened-container {
  padding: 1rem;
}

.shortened-container p {
  color: hsl(var(--cyan));
  margin-bottom: 0.5rem;
}

.shortened-container .copy-btn {
  width: 100%;
  border-radius: 5px;
  padding-block: 0.5rem;
  transition: background-color 300ms ease-in;
}

.shortened-container .copy-btn.copied {
  background-color: hsl(var(--dark-violet));
}

@media (min-width: 1050px) {
  .link-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    gap: 1rem;
  }

  .link-item:not(:last-child) {
    margin-bottom: 2.5rem;
  }

  .link-item .original-link {
    border-bottom: none;
    padding: 0;
    flex: 2;
    /* max-width: 50ch; */
  }

  .shortened-container {
    display: flex;
    align-items: center;
    padding: 0 0 0 1rem;
    flex: 1;
    justify-content: end;
  }

  .shortened-container p {
    flex-shrink: 0;
    margin-bottom: 0;
    margin-right: 1rem;
  }

  .shortened-container .copy-btn {
    padding: 0.5rem 2rem;
    max-width: 8.4rem;
  }
}

/* ------------------- */
/* Card styles         */
/* ------------------- */
.center-text {
  margin: 0 auto 7rem auto;
  text-align: center;
  padding-inline: 2rem;
  max-width: 500px;
}

.center-text h2 {
  margin-bottom: 1rem;
  color: hsl(var(--dark-violet));
  font-weight: 700;
  font-size: 1.8rem;
}

.center-text p {
  color: hsl(var(--grayish-violet));
}

.stats-cards {
  margin-bottom: 6rem;
}

.stat-card {
  position: relative;
  background-color: white;
  border-radius: 5px;
  width: 90%;
  margin: 0 auto 6rem auto;
  padding: 3rem 2.2rem 2.5rem 2.2rem;
  text-align: center;
  max-width: 350px;
}

.stats-cards .stat-card:nth-of-type(1)::after {
  content: '';
  position: absolute;
  z-index: -999;  
  display: block;
  background-color: hsl(var(--cyan));
  width: 10px;
  height: 30rem;
  bottom: -200%;
  left: 50%;
  transform: translateX(-50%);
}

.stat-card img {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: hsl(var(--dark-violet));
  padding: 1rem;
  clip-path: circle(50%);
}

.stat-card .stat-info h2 {
  color: hsl(var(--dark-violet));
  margin-bottom: 1rem;
  font-weight: 700;
}

.stat-card .stat-info p {
  color: hsl(var(--grayish-violet));
  /* max-width: 28ch; */
}

.stat-card:last-child {
  margin-bottom: 5rem;
}

@media (min-width: 720px) {
  .stats-cards .stat-card:nth-of-type(1)::after {
    height: 40rem;
    bottom: -200%;
    left: 50%;
  }
}

@media (min-width: 1150px) {
  .stats-cards {
    display: flex;
    margin-bottom: 10rem;
  }

  .stat-card img {
    left: 20%;
  }

  .stat-card h2 {
    margin-top: 1.5rem;
  }

  .stats-cards .stat-card:nth-of-type(2) {
    transform: translateY(15%);
  }

  .stats-cards .stat-card:nth-of-type(3) {
    transform: translateY(30%);
  }

  .stats-cards .stat-card:nth-of-type(1)::after {
    height: 30rem;
    bottom: -33%;
    left: 160%;
    transform: rotate(90deg);
  }

}

@media (min-width: 1200px) {
  .stats-cards .stat-card:nth-of-type(1)::after {
    height: 50rem;
    bottom: -88%;
    left: 200%;
  }
}

/* ------------------- */
/* Boost links         */
/* ------------------- */
.boost-links {
  margin: 0 auto;
  text-align: center;
  background-image: url('./images/bg-boost-mobile.svg');
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: hsl(var(--dark-violet));
  padding: 5rem 2rem;
}

.boost-links h2 {
  font-weight: 700;
  color: white;
  font-size: 1.7rem;
  margin-bottom: 1rem;
}

.boost-links .get-started {
  padding: 0.7rem 3rem;
  border-radius: 25px;
}

@media (min-width: 1050px) {
  .boost-links {
    background-image: url('./images/bg-boost-desktop.svg');
  }

  .boost-links h2 {
    font-size: 2rem;
  }

  .boost-links .get-started {
    padding: 0.7rem 4rem;
    border-radius: 25px;
  }

}

/* ------------------- */
/* Footer styles       */
/* ------------------- */
footer {
  background-color: hsl(var(--very-dark-violet));
  padding: 2rem;
  color: white;
}

.footer-wrap {
  max-width: 1500px;
  margin: 0 auto;
}

footer .footer-wrap .logo {
  /* Changes svg color to white: solution from https: //codepen.io/sosuke/pen/Pjoqqp */
  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7460%) hue-rotate(57deg) brightness(103%) contrast(115%);
  margin: 1.5rem auto 3rem auto;
}

footer .footer-wrap nav ul {
  list-style-type: none;
  padding: 0;
}

footer .footer-wrap nav ul li {
  text-align: center;
}

.footer-links {
  margin-bottom: 3rem;
}

/* social links */
.social-links ul {
  justify-content: center;
  gap: 2rem;
  padding-bottom: 2rem;
}

.social-link {
  color: white;
  font-size: 1.5rem;
  transition: color 300ms ease-in;
}

.social-link:hover {
  color: rgb(163, 163, 163);
}
/* ... */

